softmax in pytorch

--- a/nn_micrograd.ipynb
+++ b/nn_micrograd.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,15 +278,13 @@
     "# this is the negative log likelihood loss function, pervasive in classification\n",
     "logits = [Value(0.0), Value(3.0), Value(-2.0), Value(1.0)]\n",
     "probs = softmax(logits)\n",
+    "print(probs, \"probs\")\n",
     "\n",
     "loss = -(probs[3].log()) # dim 3 acts as the label for this input example\n",
     "\n",
     "\n",
     "loss.backward()\n",
-    "print(loss.grad, \"loss\")\n",
-    "print(loss._prev, \"prev\")\n",
     "\n",
-    "print(logits[3].grad, \"logits grad\")\n",
     "\n",
     "\n",
     "ans = [0.041772570515350445, 0.8390245074625319, 0.005653302662216329, -0.8864503806400986]\n",
